--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,11 @@
 Build/
 DerivedData/
-*.com.apple.timemachine.supported
-*.DocumentRevisions-V100
-*.TemporaryItems
-*.Trashes
-*.fseventsd
-*.xcuserdata
-xcshareddata
-xcuserdata
-*.xccheckout
-*.xcuserstate
+.com.apple.timemachine.supported
+.DocumentRevisions-V100
+.TemporaryItems
+.Trashes
+.fseventsd
 .DS_Store
 DerivedData
-.idea/
 build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
 profile
-*.moved-aside
