--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -18,6 +18,123 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IBeatPattern.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IBeatPatternFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IDuration.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IDurationFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IDurBase.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IDurBaseFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IDurDot.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IDurDotFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IEnum.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\INote.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\INoteFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\INoteGroup.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPitch.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPitchFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IPitchName.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IStep.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IStreameable.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\ITimeSignature.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\ITimeSignatureFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\ITupletDef.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\ITupletDefFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Lyre.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\LyreApiExport.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\NoteGroup.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Alter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\BeatPattern.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\BeatPatternFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Collection.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Duration.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurationFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase128th.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase16th.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase256th.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase32nd.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase64th.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseEighth.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseBreve.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseHalf.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseLonga.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseQuarter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseWhole.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurDot.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\DurDotFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Enum.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\makeUnique.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Mod.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Note.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\NoteFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Pitch.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PitchFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\PitchName.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Step.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\throw.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\TimeSignature.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\TimeSignatureFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\TupletDef.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\TupletDefFatory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Rational.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\toShared.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\TypeDefs.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IBeatPatternFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IDuration.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IDurationFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IDurBase.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IDurBaseFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IDurDot.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IDurDotFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IEnum.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\INote.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\INoteFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IPitch.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IPitchFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IPitchName.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IStep.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\ITimeSignatureFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\ITupletDef.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\ITupletDefFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\NoteGroup.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Alter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\BeatPattern.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\BeatPatternFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Duration.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurationFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase128th.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase16th.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase256th.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase32nd.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase64th.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseEighth.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseBreve.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseHalf.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseLonga.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseQuarter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseWhole.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurDot.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\DurDotFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Enum.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Note.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\NoteFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Pitch.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PitchFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\PitchName.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Step.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\TimeSignature.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\TimeSignatureFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\TupletDef.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\TupletDefFatory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Rational.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F765E151-6073-4B26-874F-6F839CEFF126}</ProjectGuid>
     <RootNamespace>Lyre</RootNamespace>
@@ -27,26 +144,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -146,105 +263,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IDuration.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IDurationFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IDurBase.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IDurBaseFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IDurDot.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IDurDotFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IEnum.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\INote.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\INoteFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IPitch.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IPitchFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IPitchName.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\IStep.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\ITupletDef.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\ITupletDefFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\NoteGroup.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\Alter.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\Duration.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurationFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase128th.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase16th.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase256th.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase32nd.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase64th.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBase8th.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseBreve.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseHalf.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseLonga.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseQuarter.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurBaseWhole.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurDot.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\DurDotFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\Enum.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\Note.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\NoteFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\Pitch.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\PitchFactory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\PitchName.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\Step.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\TupletDef.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Private\TupletDefFatory.cpp" />
-    <ClCompile Include="..\Sourcecode\Lyre\Rational.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\Sourcecode\Lyre\ForwardDec.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IDuration.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IDurationFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IDurBase.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IDurBaseFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IDurDot.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IDurDotFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IEnum.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\INote.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\INoteFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\INoteGroup.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IPitch.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IPitchFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IPitchName.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\IStep.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\ITupletDef.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\ITupletDefFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\NoteGroup.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Alter.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Duration.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurationFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase128th.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase16th.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase256th.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase32nd.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase64th.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBase8th.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseBreve.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseHalf.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseLonga.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseQuarter.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurBaseWhole.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurDot.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\DurDotFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Enum.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\makeUnique.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Mod.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Note.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\NoteFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Pitch.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\PitchFactory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\PitchName.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\Step.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\throw.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\TupletDef.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Private\TupletDefFatory.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\Rational.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\toShared.h" />
-    <ClInclude Include="..\Sourcecode\Lyre\TypeDefs.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
