--- a/Visual Studio/LyreTest.vcxproj
+++ b/Visual Studio/LyreTest.vcxproj
@@ -46,7 +46,7 @@
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBase256th.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBase32nd.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBase64th.cpp" />
-    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBase8th.cpp" />
+    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBaseEighth.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBaseBreve.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBaseFactory.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestDurBaseHalf.cpp" />
