Add Layer Stub Files

--- a/Visual Studio/LyreTest.vcxproj
+++ b/Visual Studio/LyreTest.vcxproj
@@ -36,6 +36,7 @@
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockPitchName.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Mock\MockStep.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestLayer.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestBeatPattern.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestBeatPatternFactory.cpp" />
     <ClCompile Include="..\Sourcecode\LyreTest\Tests\TestCollection.cpp" />
