--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\ILayer.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\ILayerFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Layer.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\LayerFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IBeatPattern.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IBeatPatternFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IDuration.h" />
@@ -86,6 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\ILayerFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Layer.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\LayerFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IBeatPatternFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IDuration.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\IDurationFactory.cpp" />
