--- a/Visual Studio/Lyre.vcxproj
+++ b/Visual Studio/Lyre.vcxproj
@@ -21,6 +21,10 @@
   <ItemGroup>
     <ClInclude Include="..\Sourcecode\Lyre\ForwardDeclare.h" />
     <ClInclude Include="..\Sourcecode\Lyre\IAlter.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMeasure.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\IMeasureFactory.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\Measure.h" />
+    <ClInclude Include="..\Sourcecode\Lyre\Private\MeasureFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\ILayer.h" />
     <ClInclude Include="..\Sourcecode\Lyre\ILayerFactory.h" />
     <ClInclude Include="..\Sourcecode\Lyre\Private\Layer.h" />
@@ -90,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Sourcecode\Lyre\IAlter.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\IMeasureFactory.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\Measure.cpp" />
+    <ClCompile Include="..\Sourcecode\Lyre\Private\MeasureFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\ILayerFactory.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\Layer.cpp" />
     <ClCompile Include="..\Sourcecode\Lyre\Private\LayerFactory.cpp" />
